[[changes]]
== Changes in {project-version}

=== Bug Fixes
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/243[#243] Fix health indicator assault is always active
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Improvements
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== New Features
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

=== Contributors
This release was only possible because of these great humans:

// - https://github.com/octocat[@octocat]

Thank you for your support!