@@ -25,7 +25,10 @@ abstract class ChaosMonkeyBaseAspect {
   @Pointcut("within(de.codecentric.spring.boot.chaos.monkey..*)")
   public void classInChaosMonkeyPackage() {}
 
-  @Pointcut("!within(is(FinalType)) && execution(* *.*(..))")
+  @Pointcut("!within(is(FinalType)) || within(com.sun.proxy.*)")
+  public void nonFinalOrJdkProxiedClassPointcut() {}
+
+  @Pointcut("nonFinalOrJdkProxiedClassPointcut() && execution(* *.*(..))")
   public void allPublicMethodPointcut() {}
 
   @Pointcut(
