@@ -6,6 +6,7 @@
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
 
 === Improvements
+ - https://github.com/codecentric/chaos-monkey-spring-boot/pull/242[#238] Also attack jvm proxies, in particular crud repository interface implementations.
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
 
 === New Features
